--- a/src/Components/SpellFinder/SpellFinder.css
+++ b/src/Components/SpellFinder/SpellFinder.css
@@ -21,3 +21,13 @@
     width: 50%;
     margin: 1em auto 1em auto
 }
+
+.button {
+    display: inline-block;
+    padding: .3em;
+    background-color: #9A0E16;
+    color: #E1E1E1;
+    border: solid black 2px;
+    border-radius: 9px;
+    font-size: 2.25em;
+}
