--- a/src/Components/SpellFinder/SpellFinder.css
+++ b/src/Components/SpellFinder/SpellFinder.css
@@ -38,7 +38,7 @@
 
 #SearchTerm {
     padding: .3em;
-    width: 30%;
+    width: 500px;
     border: solid black 2px;
     border-radius: 9px;
     margin: 29px;
