--- a/src/Components/SpellFinder/SpellFinder.css
+++ b/src/Components/SpellFinder/SpellFinder.css
@@ -67,5 +67,10 @@ header {
     #SearchTerm {
         width: 80%;
     }
+}
 
+@media screen and (max-width: 700px){
+    .medTxt {
+        font-size: 1.5em;
+    }
 }
